@@ -514,6 +514,8 @@ trade-overview-button-tooltip=Open/close the trade overview (__CONTROL__toggle-t
 collecting-trades=Collecting trades: __1__ / __2__
 filtering-trades=Filtering trades: __1__ / __2__
 sorting-trades=Sorting __1__ trades...
+exporting-trades=Exporting trades: __1__ / __2__
+export-complete=Export complete!
 no-planets-selected=No planets selected
 no-trades-match-filters=No trades match the current filters
 item-value=Item Value
