@@ -29,6 +29,7 @@ Date: 18/12/25
     - When multiple players are using the trade overview simulataneously, the calculations are load balanced (full speed for one player, half speed for two players, etc.).
     - Optimized sorting trades in the trade overview by total item value.
     - Optimized trade productivity updates.
+    - Part of the trades JSON export is batch-processed, spanning more than one tick.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.12
 Date: 16/12/25
